.tekton/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aolda-tekton-approval
  labels:
    docker-secret-sync: enabled
