.tekton/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: harbor.aolda.in/aolda/tekton/approval/frontend:498bd99
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker-secret
