.tekton/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-approval-frontend-external
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: frontend.aolda-tekton-approval.svc.cluster.local
  ports:
  - port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-approval-frontend-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - approval.cloud.aolda.in
    secretName: wildcard-aoldacloud-dev-cert
  rules:
  - host: approval.cloud.aolda.in
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tekton-approval-frontend-external
            port:
              number: 80
